ajout de l'action fetch et save pokemons + rendu dynamique des pokemons

--- a/src/components/Pokemon/styles.scss
+++ b/src/components/Pokemon/styles.scss
@@ -8,8 +8,8 @@
   margin: 0.5rem;
 
   .pokemon-img {
-    width: 200px;
-    height: 200px;
+    width: 60%;
+    height: 60%;
     margin: 1rem;
   }
 
