--- a/src/components/Pokemon/styles.scss
+++ b/src/components/Pokemon/styles.scss
@@ -25,5 +25,12 @@
     color: white;
     font-weight: bold;
     border-radius: 5px;
+    opacity: 0.5;
+    transition: opacity 1s;
+    
+    &:hover {
+      cursor: pointer;
+      opacity: 1;
+    }
   }
 }
