--- a/src/components/PokemonFilterByName/styles.scss
+++ b/src/components/PokemonFilterByName/styles.scss
@@ -8,4 +8,12 @@
   &::placeholder {
     color: black;
   }
+
+  @media (min-width: 481px) and (max-width: 768px) {
+    width: 40%;
+  }
+
+  @media (max-width: 480px) {
+    width: 60%;
+  }
 }
