--- a/src/components/PokemonFilterByType/styles.scss
+++ b/src/components/PokemonFilterByType/styles.scss
@@ -5,5 +5,13 @@
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
+
+  @media (min-width: 481px) and (max-width: 768px) {
+    width: 70%;
+  }
+
+  @media (max-width: 480px) {
+    width: 95%;
+  }
 }
 
