--- a/src/styles/_vars.scss
+++ b/src/styles/_vars.scss
@@ -3,3 +3,4 @@
 $mainColor: #C14040;
 $lightColor: color.scale($mainColor, $lightness:+80%);
 $darkColor: color.scale($mainColor, $lightness:-30%);
+$darkerColor: color.scale($mainColor, $lightness:-50%);
