--- a/src/components/App/Header/styles.scss
+++ b/src/components/App/Header/styles.scss
@@ -6,6 +6,10 @@
   display: flex;
   justify-content: space-between;
 
+  .logo {
+    height: 100%;
+  }
+  
   .form {
     display: flex;
     margin: auto;
