--- a/src/components/App/PokemonDetailsPage/PokemonDetails/styles.scss
+++ b/src/components/App/PokemonDetailsPage/PokemonDetails/styles.scss
@@ -1,14 +1,8 @@
 @use 'src/styles/vars';
 
 .pokemon-details{
-  height: 90vh;
+  height: 100vh;
   max-width: 100vw;
-}
-
-.pokemon-details-title{
-  color: white;
-  font-weight: bold;
-  font-size: 2.5rem;
 }
 
 .pokemon-details-div{
@@ -53,9 +47,8 @@
   color: white;
   display: flex;
   flex-direction: column;
-  background-color: #982c2c;
+  background-color: vars.$darkColor;
   border-radius: 1rem;
-  margin: 1rem;
   padding: 1rem;
   text-align: left;
 }
@@ -81,7 +74,7 @@
   border-radius: 0.5rem;
   font-weight: bold;
   font-size: 1.5rem;
-  margin-right: 1.5rem;
+  margin-right: 1rem;
   text-align: center;
   line-height: 1.5rem;
 }
@@ -140,5 +133,48 @@
   text-align: center;
 }
 
+.pokemon-details-evolutions {
+  background-color: vars.$darkerColor;
+  min-height: 45%;
+  width: 100%;
+  border-radius: 0.5rem;
+  margin: auto;
+  margin-top: 1.5rem;
+}
+
+.pokemon-details-evolutions-title {
+  font-size: 1.75rem;
+  font-weight: bold;
+  margin: 1rem;
+}
+
+.pokemon-details-evolutions-content {
+  text-align: center;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  margin-left: 3rem;
+}
+
+.pokemon-details-evolutions-bloc {
+  display: flex;
+  flex-wrap: wrap;
+  max-width: 75%;
+  align-items: center;
+}
+
+.pokemon-details-evolution {
+  margin: 0.5rem 2rem;
+  width: 15%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.pokemon-details-evolution-name {
+  font-weight: bold;
+  margin: 0.5rem;
+}
 
 
