suppression de l'ancien signupform + ajout du lien pour charger la page sign_up en dessous du loginForm

--- a/src/components/App/Header/styles.scss
+++ b/src/components/App/Header/styles.scss
@@ -13,3 +13,16 @@
   }
   
 }
+
+.connexion  {
+  text-align: left;
+}
+
+.registration {
+  font-size: 0.8rem;
+  margin-left: 1rem;
+}
+
+.registration:hover {
+  font-weight: bold;
+}
