--- a/src/components/App/Home/Content/Pokemon/styles.scss
+++ b/src/components/App/Home/Content/Pokemon/styles.scss
@@ -6,6 +6,7 @@
   background-color: vars.$darkColor;
   border-radius: 30px;
   margin: 0.5rem;
+  position: relative;
 
   @media (min-width: 481px) and (max-width: 768px) {
     width: 40%;
@@ -13,6 +14,17 @@
 
   @media (max-width: 480px) {
     width: 80%;
+  }
+
+  .logo-container {
+    position: absolute;
+    top: 10px; /* Ajustez la valeur selon votre préférence */
+    right: 10px; /* Ajustez la valeur selon votre préférence */
+  }
+  
+  .logo-img {
+    width: 50px; /* Ajustez la taille de votre logo selon votre préférence */
+    height: auto;
   }
 
   .pokemon-img {
