--- a/src/components/App/MyTeamPage/MyTeam/styles.scss
+++ b/src/components/App/MyTeamPage/MyTeam/styles.scss
@@ -20,6 +20,13 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  position: relative;
+}
+
+.delete-icon-container {
+  position: absolute;
+  top: 10px;
+  right: 10px; 
 }
 
 .my-team-member-img {
