--- a/src/components/App/MyTeamPage/styles.scss
+++ b/src/components/App/MyTeamPage/styles.scss
@@ -3,8 +3,14 @@
 
   .my-team-page-title {
     margin-top: 2rem;
-    font-size: 1.5rem;
+    font-size: 2.5rem;
     font-weight: bold;
     color: white;
+  }
+
+  .my-team-page-content {
+    display: flex;
+    justify-content: space-around;
+    width: 85%;
   }
 }
