header en position fixed + ajustement de toutes les pages concernées

--- a/src/components/App/Home/styles.scss
+++ b/src/components/App/Home/styles.scss
@@ -1,9 +1,10 @@
 .home {
   min-height: 100vh;
-  margin: 1.5rem;
+  margin-top: 10vh;
 
   .home-title {
     margin-bottom: 1rem;
+    padding-top: 2rem;
     font-weight: bold;
     font-size: 2rem;
     color: white;
