--- a/src/components/App/SignUp/styles.scss
+++ b/src/components/App/SignUp/styles.scss
@@ -1,9 +1,8 @@
 @use 'src/styles/vars';
 
 .sign-up {
-  background-color: white;
   width: 50%;
   margin: auto;
-  margin-top: 2rem;
+  margin-top: 10vh;
   padding: 3rem 0;
 }
