--- a/src/components/App/Header/styles.scss
+++ b/src/components/App/Header/styles.scss
@@ -6,6 +6,10 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
+  position: fixed;
+  top: 0;
+  width: 100vw;
+  z-index: 1000;
 
   .logo {
     height: 100%;
@@ -16,6 +20,7 @@
 
 .right-header {
   display: flex;
+  margin-right: 2rem;
 }
 
 .pokeball {
