--- a/src/components/App/MyTeamPage/styles.scss
+++ b/src/components/App/MyTeamPage/styles.scss
@@ -1,9 +1,11 @@
 .my-team-page {
   min-height: 90vh;
+  margin-top: 10vh;
+  padding-top: 2rem;
 
   .my-team-page-title {
-    margin-top: 2rem;
     font-size: 2.5rem;
+    margin-bottom: 1rem;
     font-weight: bold;
     color: white;
   }
